# markov-music

./: .gitignore  .gitmodules  Cargo.toml  README.md  convert.sh  run.sh
src/: chaos.rs  distribution.rs  lib.rs  main.rs  markov.rs  midi.rs  neural.rs  neural2.rs  notes.rs  quantize.rs  samples.rs  wavelet.rs
