[package]
name = "markov-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.7.0"
clap = { version = "4.0.8", features = ["derive"] }
derive_more = "0.99.17"
flamegraph = "0.6.2"
itertools = "0.10.5"
# Pinned to this commit: https://github.com/a2aaron/midly/commit/62216a6f296d77f10c62008b8dadc02b2804f354
midly = { git = "https://github.com/a2aaron/midly", rev = "62216a6f296d77f10c62008b8dadc02b2804f354" }
minimp3 = "0.5.1"
pixel-canvas = "0.2.3"
rand = "0.8.5"
rayon = "1.5.3"
wav = "1.0.0"
